product management backend and frontend all codes are updated