@@ -1,4 +1,3 @@
-// src/main/java/net/javaguides/ims_backend/service/UserService.java
 package net.javaguides.ims_backend.service;
 
 import net.javaguides.ims_backend.entity.User;
@@ -8,37 +7,52 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
+
     @Autowired
     private UserRepository userRepository;
 
     @Autowired
     private PasswordEncoder passwordEncoder;
 
-    public User login(String email, String password) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        if (passwordEncoder.matches(password, user.getPassword())) {
-            return user;
+    public User saveUser(User user) {
+        if (user.getId() == null || !userRepository.findById(user.getId())
+                .map(User::getEmail).equals(Optional.of(user.getEmail()))) {
+            if (userRepository.existsByEmail(user.getEmail())) {
+                throw new RuntimeException("Email already exists");
+            }
         }
-        throw new RuntimeException("Invalid credentials");
+        return userRepository.save(user);
     }
 
-    public User saveUser(User user) {
-        user.setPassword(passwordEncoder.encode(user.getPassword()));
-        return userRepository.save(user);
+    public Optional<User> findById(Long id) {
+        return userRepository.findById(id);
+    }
+
+    public Optional<User> findByEmail(String email) {
+        return userRepository.findByEmail(email);
     }
 
     public List<User> getAllEmployees() {
         return userRepository.findAll().stream()
-                .filter(user -> "EMPLOYEE".equals(user.getRole()))
-                .toList();
+                .filter(user -> user.getJobTitle() != null &&
+                        user.getJobTitle().toLowerCase().equals("employee"))
+                .collect(Collectors.toList());
     }
 
     public void deleteEmployee(Long id) {
+        if (!userRepository.existsById(id)) {
+            throw new RuntimeException("Employee not found");
+        }
         userRepository.deleteById(id);
+    }
+
+    public User getCurrentUser(String email) {
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
     }
 }
